--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,4 +16,5 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: 3.x
+      - run: pip install mkdocs-material
       - run: mkdocs gh-deploy --force
