--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,26 +5,10 @@ site_url: https://heavybullets8.github.io/HeavySetup/
 
 repo_url: https://github.com/Heavybullets8/HeavySetup
 repo_name: HeavySetup
-
-nav:
-  - Introduction: "index.md"
-  - General Guides:
-    - Storage Permissions: "general_guides/storage_permissions.md"
-    - Folder Structure: "general_guides/folder_structure.md"
-  - App Installation:
-      - NZBGet: "app_installation/nzbget/nzbget.md"
-      - qBittorrent: "app_installation/qbittorrent/qbittorrent.md"
-      - Syncthing: "app_installation/syncthing/syncthing.md"
-      - Radarr: "app_installation/radarr/radarr.md"
-      - Sonarr: "app_installation/sonarr/sonarr.md"
-      - Notifiarr: "app_installation/notifiarr/notifiarr.md"
-  - App Setup:
-      - NZBGet: "in_app_setup/nzbget.md" 
-      - qBittorrent: "in_app_setup/qbittorrent.md"
-      - Radarr: "in_app_setup/radarr.md"
-      - Sonarr: "in_app_setup/sonarr.md"
-
-
+     
+plugins:
+    - search
+    - awesome-pages
 theme:
   name: material
   features:
